<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#60605D"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/songs" />

    <LinearLayout
        android:id="@+id/first_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:background="@drawable/genres" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="#F1F1E9"
            android:padding="20dp"
            android:text="@string/first_song" 
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:background="@drawable/genres" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="#F1F1E9"
            android:padding="20dp"
            android:text="@string/second_song" 
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:background="@drawable/genres" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textSize="13sp"
            android:background="#F1F1E9"
            android:padding="20dp"
            android:text="@string/third_song" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:background="@drawable/genres" 
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="#F1F1E9"
            android:textSize="15sp"
            android:padding="20dp"
            android:text="@string/fourth_song" />
    </LinearLayout>


</LinearLayout>